workspace-sf/force-app/main/default/objects/CredencialOAuth2__mdt/CredencialOAuth2__mdt.object-meta.xml
<CustomObject>
    <label>Credencial OAuth 2</label>
    <pluralLabel>Credenciais OAuth 2</pluralLabel>
</CustomObject>