workspace-sf/force-app/main/default/objects/CredencialOAuth2__mdt/fields/ClientSecret__c.field-meta.xml
<CustomField>
    <fullName>ClientSecret__c</fullName>
    <label>Client secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>