workspace-sf/force-app/main/default/objects/CredencialOAuth2__mdt/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>Grant type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>